--- a/src/components/game/game.component.html
+++ b/src/components/game/game.component.html
@@ -30,16 +30,12 @@
     </div>
   </div>
 
-  <div class="flex-[2] bg-white rounded-3xl shadow p-3 flex flex-col min-h-[200px] md:min-h-[360px]">
-    <div class="relative flex-1 rounded-2xl overflow-hidden bg-white shadow-inner">
-      <app-canvas class="h-full w-full block" />
-    </div>
+  <div class="flex-[2] bg-white rounded-3xl shadow flex flex-col min-h-[200px] md:min-h-[340px] overflow-hidden">
+    <app-canvas class="h-full w-full block" />
   </div>
 
-  <div class="bg-white rounded-2xl shadow p-3 flex-1 min-h-0">
-    <div class="bg-gray-50 rounded-2xl h-full px-3 py-2 shadow-inner">
-      <app-chat class="h-full w-full block" />
-    </div>
+  <div class="bg-white rounded-2xl shadow flex-[1.1] min-h-[220px] overflow-hidden">
+    <app-chat class="h-full w-full block" />
   </div>
 
   <!-- Word Selection Overlay -->
